--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -2223,7 +2223,7 @@
         },
         "gc_config": {
             "texto1": [
-                "*[❗] 𝙵𝙾𝚁𝙼𝙰𝚃𝙾 𝙴𝚁𝚁𝙾𝙽𝙴𝙾!!*",
+                "*[❗] 𝙶𝚁𝚄𝙿𝙾 𝙲𝙾𝙽𝙵𝙸𝙶𝚄𝚁𝙰𝙳𝙾 𝙲𝙾𝚁𝚁𝙴𝙲𝚃𝙰𝙼𝙴𝙽𝚃𝙴*",
                 "*┏━━━❲ ✨𝙴𝙹𝙴𝙼𝙿𝙻𝙾✨ ❳━━━┓*",
                 "*[ ✔ ] 𝙶𝚁𝚄𝙿𝙾 𝙲𝙾𝙽𝙵𝙸𝙶𝚄𝚁𝙰𝙳𝙾 𝙲𝙾𝚁𝚁𝙴𝙲𝚃𝙰𝙼𝙴𝙽𝚃𝙴*"
             ]
@@ -3843,8 +3843,8 @@
             "texto9": "*[ ℹ️ ] Para utilizar este comando debes estar registrado.*\n\n*[ 💡 ] Utiliza el comando:* _/verificar nombre.edad_ *para registrarte.*",
             "texto10": "*[ ℹ️ ] Este comando fue desactivado por el propietario del bot.*",
             "texto11": [
-                "*[ ⚠ ] Advertencia*",
-                "*[ ⚠ ] Advertencia*",
+                "𝗚𝗛𝗢𝗦𝗧 𝗕𝗢𝗧",
+                "𝗚𝗛𝗢𝗦𝗧 𝗕𝗢𝗧",
                 "https://chat.whatsapp.com/GR7mHgTet2ADjjD3gdiAWR"
             ]
         },
